--- a/optimset.bib
+++ b/optimset.bib
@@ -1,6 +1,15 @@
 %% Makefile
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
 
+@techreport{Ghanbari_Scheinberg_2017,
+    title        = {Black-box optimization in machine learning with trust region based derivative free algorithm},
+    author       = {Ghanbari, H. and Scheinberg, K.},
+    year         = 2017,
+    address      = {Bethlehem, PA, USA},
+    number       = {17T-005},
+    institution  = {COR\@L},
+}
+
 @inproceedings{Powell_2006,
     title        = {The {NEWUOA} software for unconstrained optimization without derivatives},
     author       = {Powell, M. J. D.},
@@ -11,5 +20,14 @@
     series       = {Nonconvex Optimization and Its Applications},
     volume       = 83,
     pages        = {255--297},
-    editor       = {{Di Pillo}, G. and Roma, M.}
+    editor       = {{Di Pillo}, G. and Roma, M.},
+}
+
+@article{Qian_Yu_2021,
+    title        = {Derivative-free reinforcement learning: a review},
+    author       = {Qian, H. and Yu, Y.},
+    year         = 2021,
+    journal      = {Front. Comput. Sci.},
+    volume       = 15,
+    pages        = 156336,
 }
