--- a/optimset.tex
+++ b/optimset.tex
@@ -26,6 +26,7 @@
 
 % Glossaries
 \usepackage[acronym]{glossaries}
+\glsdisablehyper
 \newacronym{dfo}{DFO}{derivative-free optimization}
 
 % Line numbering in draft mode
@@ -75,16 +76,19 @@
 \maketitle
 
 \begin{abstract}
-    To do.
+    To do.\todo{Do the abstract}
 \end{abstract}
 
 \section{Introduction}
 
-It is challenging to design optimization methods that do not rely on classical or generalized derivative information of the problems they solve, namely \gls{dfo} methods.\todo{Add examples}
+It is challenging to design optimization methods that do not rely on classical or generalized derivative information of the problems they solve, namely \gls{dfo} methods.
+However, these methods are necessary for solving problems whose derivatives are not available or too expensive to compute.
+There are many examples of applications of this kind, such as hyperparameter tuning in machine learning~\cite{Ghanbari_Scheinberg_2017}, derivative-free reinforcement learning~\cite{Qian_Yu_2021}.
+\todo{Add more examples}
 
 \section{Description of the initial interpolation set}
 
-\todo[noline]{Adapted from~\cite{Powell_2006}}
+To do.\todo{Adapted from~\cite{Powell_2006}}
 
 \bibliographystyle{plain}
 \bibliography{\jobname}
