--- a/optimset.bib
+++ b/optimset.bib
@@ -1,33 +1,59 @@
 %% Makefile
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
+@article{Eldred_Etal_2022,
+    title         = {Derivative-free optimization of a rapid-cycling synchrotron},
+    author        = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
+    year          = 2022,
+    journal       = {Optim. Eng.},
+    volume        = 124,
+    pages         = {1--27},
+}
+
+@inproceedings{Gazaix_Etal_2019,
+    title         = {Industrial application of an advanced bi-level {MDO} formulation to aircraft engine pylon optimization},
+    author        = {Gazaix, A. and Gallard, F. and Ambert, V. and Gu{\'{e}}not, D. and Hamadi, M. and Grihon, S. and Sarouille, P. and Druot, T. and Brezillon, J. and Gachelin, V. and Plakoo, J. and Desfachelles, N. and Bartoli, N. and Lefebvre, T. and G{\"{u}}rol, S. and Pauwels, B. and Vanaret, C. and Lafage, R.},
+    year          = 2019,
+    booktitle     = {AIAA Aviation 2019 Forum},
+    publisher     = {AIAA},
+    address       = {Dallas, TX, USA},
+}
 
 @techreport{Ghanbari_Scheinberg_2017,
-    title        = {Black-box optimization in machine learning with trust region based derivative free algorithm},
-    author       = {Ghanbari, H. and Scheinberg, K.},
-    year         = 2017,
-    address      = {Bethlehem, PA, USA},
-    number       = {17T-005},
-    institution  = {COR\@L},
+    title         = {Black-box optimization in machine learning with trust region based derivative free algorithm},
+    author        = {Ghanbari, H. and Scheinberg, K.},
+    year          = 2017,
+    address       = {Bethlehem, PA, USA},
+    number        = {17T-005},
+    institution   = {COR{@}L},
+}
+
+@article{Kolda_Lewis_Torczon_2003,
+    title         = {Optimization by direct search: New perspectives on some classical and modern methods},
+    author        = {Kolda, T. G. and Lewis, R. M. and Torczon, V.},
+    year          = 2003,
+    journal       = {SIAM Rev.},
+    volume        = 45,
+    pages         = {385--482},
 }
 
 @inproceedings{Powell_2006,
-    title        = {The {NEWUOA} software for unconstrained optimization without derivatives},
-    author       = {Powell, M. J. D.},
-    year         = 2006,
-    booktitle    = {Large-Scale Nonlinear Optimization},
-    publisher    = {Springer},
-    address      = {Boston, MA, USA},
-    series       = {Nonconvex Optimization and Its Applications},
-    volume       = 83,
-    pages        = {255--297},
-    editor       = {{Di Pillo}, G. and Roma, M.},
+    title         = {The {NEWUOA} software for unconstrained optimization without derivatives},
+    author        = {Powell, M. J. D.},
+    year          = 2006,
+    booktitle     = {Large-Scale Nonlinear Optimization},
+    publisher     = {Springer},
+    address       = {Boston, MA, USA},
+    series        = {Nonconvex Optimization and Its Applications},
+    volume        = 83,
+    pages         = {255--297},
+    editor        = {{Di Pillo}, G. and Roma, M.},
 }
 
 @article{Qian_Yu_2021,
-    title        = {Derivative-free reinforcement learning: a review},
-    author       = {Qian, H. and Yu, Y.},
-    year         = 2021,
-    journal      = {Front. Comput. Sci.},
-    volume       = 15,
-    pages        = 156336,
+    title         = {Derivative-free reinforcement learning: a review},
+    author        = {Qian, H. and Yu, Y.},
+    year          = 2021,
+    journal       = {Front. Comput. Sci.},
+    volume        = 15,
+    pages         = 156336,
 }
