--- a/optimset.bib
+++ b/optimset.bib
@@ -1,59 +1,180 @@
 %% Makefile
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
+@article{Audet_Dennis_2006,
+    title        = {Mesh adaptive direct search algorithms for constrained optimization},
+    author       = {Audet, C. and Dennis, Jr., J. E.},
+    year         = 2006,
+    journal      = {SIAM J. Optim.},
+    volume       = 17,
+    pages        = {188--217},
+}
+
+@article{Booker_Etal_1999,
+    title        = {A rigorous framework for optimization of expensive functions by surrogates},
+    author       = {Booker, A. J. and Dennis, Jr., J. E. and Frank, P. D. and Serafini, D. B. and Torczon, V. and Trosset, M. W.},
+    year         = 1999,
+    journal      = {Struct. Multidiscip. Optim.},
+    volume       = 17,
+    pages        = {1--13},
+}
+
+@book{Conn_Scheinberg_Vicente_2009,
+    title        = {Introduction to Derivative-Free Optimization},
+    author       = {Conn, A. R. and Scheinberg, K. and N. Vicente, L.},
+    year         = 2009,
+    publisher    = {SIAM},
+    series       = {MPS-SIAM Ser. Optim.},
+}
+
+@inproceedings{Conn_Toint_1996,
+    title        = {An algorithm using quadratic interpolation for unconstrained derivative free optimization},
+    author       = {Conn, A. R. and Toint, Ph. L.},
+    year         = 1996,
+    booktitle    = {Nonlinear Optimization and Applications},
+    publisher    = {Springer},
+    pages        = {27--47},
+    editor       = {{Di Pillo}, G. and Giannessi, F.},
+}
+
 @article{Eldred_Etal_2022,
-    title         = {Derivative-free optimization of a rapid-cycling synchrotron},
-    author        = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
-    year          = 2022,
-    journal       = {Optim. Eng.},
-    volume        = 124,
-    pages         = {1--27},
+    title        = {Derivative-free optimization of a rapid-cycling synchrotron},
+    author       = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
+    year         = 2022,
+    journal      = {Optim. Eng.},
+    volume       = 124,
+    pages        = {1--27},
 }
 
 @inproceedings{Gazaix_Etal_2019,
-    title         = {Industrial application of an advanced bi-level {MDO} formulation to aircraft engine pylon optimization},
-    author        = {Gazaix, A. and Gallard, F. and Ambert, V. and Gu{\'{e}}not, D. and Hamadi, M. and Grihon, S. and Sarouille, P. and Druot, T. and Brezillon, J. and Gachelin, V. and Plakoo, J. and Desfachelles, N. and Bartoli, N. and Lefebvre, T. and G{\"{u}}rol, S. and Pauwels, B. and Vanaret, C. and Lafage, R.},
-    year          = 2019,
-    booktitle     = {AIAA Aviation 2019 Forum},
-    publisher     = {AIAA},
-    address       = {Dallas, TX, USA},
+    title        = {Industrial application of an advanced bi-level {MDO} formulation to aircraft engine pylon optimization},
+    author       = {Gazaix, A. and Gallard, F. and Ambert, V. and Gu{\'{e}}not, D. and Hamadi, M. and Grihon, S. and Sarouille, P. and Druot, T. and Brezillon, J. and Gachelin, V. and Plakoo, J. and Desfachelles, N. and Bartoli, N. and Lefebvre, T. and G{\"{u}}rol, S. and Pauwels, B. and Vanaret, C. and Lafage, R.},
+    year         = 2019,
+    booktitle    = {AIAA Aviation 2019 Forum},
+    publisher    = {AIAA},
+    address      = {Dallas, TX, USA},
 }
 
 @techreport{Ghanbari_Scheinberg_2017,
-    title         = {Black-box optimization in machine learning with trust region based derivative free algorithm},
-    author        = {Ghanbari, H. and Scheinberg, K.},
-    year          = 2017,
-    address       = {Bethlehem, PA, USA},
-    number        = {17T-005},
-    institution   = {COR{@}L},
+    title        = {Black-box optimization in machine learning with trust region based derivative free algorithm},
+    author       = {Ghanbari, H. and Scheinberg, K.},
+    year         = 2017,
+    number       = {17T-005},
+    institution  = {COR{\@}L},
+}
+
+@article{Hooke_Jeeves_1961,
+    title        = {Direct search solution of numerical and statistical problems},
+    author       = {Hooke, R. and Jeeves, T. A.},
+    year         = 1961,
+    journal      = {J. ACM},
+    volume       = 8,
+    pages        = {212--229},
+}
+
+@book{Kelley_2011,
+    title        = {Implicit Filtering},
+    author       = {Kelley, C. T.},
+    year         = 2011,
+    publisher    = {SIAM},
+    series       = {Software Environ. Tools},
 }
 
 @article{Kolda_Lewis_Torczon_2003,
-    title         = {Optimization by direct search: New perspectives on some classical and modern methods},
-    author        = {Kolda, T. G. and Lewis, R. M. and Torczon, V.},
-    year          = 2003,
-    journal       = {SIAM Rev.},
-    volume        = 45,
-    pages         = {385--482},
+    title        = {Optimization by direct search: New perspectives on some classical and modern methods},
+    author       = {Kolda, T. G. and Lewis, R. M. and Torczon, V.},
+    year         = 2003,
+    journal      = {SIAM Rev.},
+    volume       = 45,
+    pages        = {385--482},
+}
+
+@article{Nelder_Mead_1965,
+    title        = {A simplex method for function minimization},
+    author       = {Nelder, J. A. and Mead, R.},
+    year         = 1965,
+    journal      = {Comput. J.},
+    volume       = 7,
+    pages        = {308--313},
+}
+
+@article{Porcelli_Toint_2017,
+    title        = {{BFO}, a trainable derivative-free brute force optimizer for nonlinear bound-constrained optimization and equilibrium computations with continuous and discrete variables},
+    author       = {Porcelli, M. and Toint, Ph. L.},
+    year         = 2017,
+    journal      = {ACM Trans. Math. Software},
+    volume       = 44,
+    pages        = {6:1--6:25},
+}
+
+@article{Porcelli_Toint_2022,
+    title        = {Exploiting problem structure in derivative free optimization},
+    author       = {Porcelli, M. and Toint, Ph. L.},
+    year         = 2022,
+    journal      = {ACM Trans. Math. Software},
+    volume       = 48,
+    pages        = {1--25},
+}
+
+@inproceedings{Powell_1994,
+    title        = {A direct search optimization method that models the objective and constraint functions by linear interpolation},
+    author       = {Powell, M. J. D.},
+    year         = 1994,
+    booktitle    = {Advances in Optimization and Numerical Analysis},
+    publisher    = {Springer},
+    volume       = 275,
+    pages        = {51--67},
+    editor       = {Gomez, S. and Hennart, J. P.},
+}
+
+@article{Powell_2002,
+    title        = {{UOBYQA}: unconstrained optimization by quadratic approximation},
+    author       = {Powell, M. J. D.},
+    year         = 2002,
+    journal      = {Math. Program.},
+    volume       = 92,
+    pages        = {555--582},
 }
 
 @inproceedings{Powell_2006,
-    title         = {The {NEWUOA} software for unconstrained optimization without derivatives},
-    author        = {Powell, M. J. D.},
-    year          = 2006,
-    booktitle     = {Large-Scale Nonlinear Optimization},
-    publisher     = {Springer},
-    address       = {Boston, MA, USA},
-    series        = {Nonconvex Optimization and Its Applications},
-    volume        = 83,
-    pages         = {255--297},
-    editor        = {{Di Pillo}, G. and Roma, M.},
+    title        = {The {NEWUOA} software for unconstrained optimization without derivatives},
+    author       = {Powell, M. J. D.},
+    year         = 2006,
+    booktitle    = {Large-Scale Nonlinear Optimization},
+    publisher    = {Springer},
+    series       = {Nonconvex Optimization and Its Applications},
+    volume       = 83,
+    pages        = {255--297},
+    editor       = {{Di Pillo}, G. and Roma, M.},
+}
+
+@techreport{Powell_2009,
+    title        = {The {BOBYQA} algorithm for bound constrained optimization without derivatives},
+    author       = {Powell, M. J. D.},
+    year         = 2009,
+    number       = {DAMTP 2009/NA06},
+    institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge},
 }
 
 @article{Qian_Yu_2021,
-    title         = {Derivative-free reinforcement learning: a review},
-    author        = {Qian, H. and Yu, Y.},
-    year          = 2021,
-    journal       = {Front. Comput. Sci.},
-    volume        = 15,
-    pages         = 156336,
+    title        = {Derivative-free reinforcement learning: a review},
+    author       = {Qian, H. and Yu, Y.},
+    year         = 2021,
+    journal      = {Front. Comput. Sci.},
+    volume       = 15,
+    pages        = 156336,
 }
+
+@phdthesis{Ragonneau_2022,
+    title        = {Model-Based Derivative-Free Optimization Methods and Software},
+    author       = {Ragonneau, T. M.},
+    year         = 2022,
+    school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
+}
+
+@inproceedings{Wild_2008,
+    title        = {{MNH}: a derivative-free optimization algorithm using minimal norm {Hessians}},
+    author       = {Wild, S. M.},
+    year         = 2008,
+    booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
+}
+
